--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <script>
     const tokenAddress = "0xb68d3a2f01871b2A67aFCa631056da6CAC6D9Ad9";
     const tokenDecimals = 18;
-    const chainId = "0x27DA"; // 10218 desimal ke hex
+    const chainId = "0x27EA"; // 10218 desimal ke hex
 
     const tokenAbi = [
       "function transfer(address to, uint256 amount) public returns (bool)",
